# GBC_AI_Sem1

AMML/Week1/LabExercise/: Diparshan_LabExercise5.docx  Lab Exercise 1.ipynb  Lab Exercise 2.ipynb  Lab Exercise 3.ipynb  Lab Exercise 5.ipynb
AMML/Week1/LabExercise/.ipynb_checkpoints/: Lab Exercise 1-checkpoint.ipynb  Lab Exercise 2-checkpoint.ipynb  Lab Exercise 3-checkpoint.ipynb  Lab Exercise 5-checkpoint.ipynb
AMML/Week1/Practice/: Practice 1.ipynb  Practice 2.ipynb  Untitled.ipynb
AMML/Week1/Practice/.ipynb_checkpoints/: Practice 1-checkpoint.ipynb  Practice 2-checkpoint.ipynb
AMML/Week3/labs11-13/.ipynb_checkpoints/: Lab_Exercise_13_bikashgiri-checkpoint.ipynb
AMML/week2/Week3/labs11-13/: Diparshan_Lab Exercise 12.ipynb  Lab_Exercise_13_bikashgiri.ipynb
AMML/week2/labs610/: Lab Exercise 10 2.ipynb  Lab Exercise 6.ipynb  Lab Exercise 7.ipynb  Lab Exercise 8.ipynb  Table of Contents.html
AMML/week2/labs610/.ipynb_checkpoints/: Abdul-rasaq Lab Exercise 9-checkpoint.ipynb  Diparshan_Lab Exercise 10-checkpoint.ipynb  (+4 more)
AMML/week2/solved/: Group 1 Lab Exercise 7.ipynb  Lab Exercise 6.ipynb
ML1/Week1/PracticeNotebooks/: 01. Operators.ipynb  02. Objects and Types.ipynb  03. Strings.ipynb  Solutions.ipynb
ML1/Week2/practice/: Pandas_Practice.ipynb  Random_Practice.ipynb  Untitled.ipynb
ML1/Week2/tasks/task7/Refs/GBC_ML1_Task7_AutoFeatureSelector-main/: Task7_AutoFeatureSelector.ipynb  auto_feature_selector.py  pyproject.toml
ML1/Week2/tasks/task7/Refs/GBC_ML1_Task7_AutoFeatureSelector-main/.ipynb_checkpoints/: Task7_AutoFeatureSelector-checkpoint.ipynb
(+20 files in other folders)
